<resources>

    <string name="app_name">PartsCribber</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login">LOGIN</string>
    <string name="login_username">Username (ID)</string>
    <string name="open_registerpage_button">REGISTER</string>

    <!-- REGISTER NEW STUDENT/ADMIN ACTIVITY -->
    <string name="username_hint">Student Username</string>
    <string name="firstname_hint">First Name </string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirmpassword_hint">Confirm Password</string>
    <string name="register_singlestudent_button">REGISTER STUDENT</string>
    <string name="register_newadmin_button">REGISTER ADMIN</string>

    <!-- ADMIN MENU ACTIVITY -->
    <string name="adminmenuparenttext"> </string>
    <string name="adminmenuchildtext"> </string>
    <string name="welcomeusername"> </string>

    <!-- STUDENT MENU ACTIVITY -->
    <string name="my_possessions_button">Possessions</string>
    <string name="my_cart_button">My Cart</string>

    <!-- VIEW/EDIT PROFILE ACTIVITY -->
    <string name="edit_profile_header">Profile Information</string>
    <string name="edit_profile_username">Your Username</string>
    <string name="edit_profile_firstname">Your Firstname</string>
    <string name="edit_profile_lastname">Your Lastname</string>
    <string name="edit_profile_email">Your Email</string>
    <string name="user_status">Admin/Student</string>
    <string name="edit_button">EDIT INFORMATION</string>
    <string name="save_button">SAVE INFORMATION</string>
    <string name="logout_button">Log Out</string>

    <!-- CHANGE PASSWORD ACTIVITY -->
    <string name="change_password_header">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_current_password">Confirm Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_password_button">SAVE PASSWORD CHANGES</string>

    <!-- ROW LAYOUT & SEARCHVIEW HINTS -->
    <string name="search_equipment_hint">Search Equipment</string>
    <string name="search_category_hint">Search Category</string>

    <!-- TOOLS DATA ACTIVITY -->
    <string name="view_holders">View Holders</string>
    <string name="delete_item">Delete Item</string>
    <string name="serial_no">Serial Number</string>
    <string name="qty_available">Available Quantity </string>
    <string name="qty_rented">Rented Quantity</string>
    <string name="qty_total">Total Quantity</string>
    <string name="item_category">Category</string>
    <string name="update_this_item_data">Update Item Info</string>
    <string name="rent_item">Rent Item</string>
    <string name="add_item_to_cart">Add to Cart</string>
    <string name="view_cart_button">View Cart</string>
    <string name="update_inventory_header">Add New Equipment</string>
    <string name="category_value">Item Category</string>

    <!-- UPDATE ITEM ACTIVITY -->
    <string name="update_item_header">Update Item Information</string>
    <string name="serial_number">Serial No.</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="rented_quantity">Rented Quantity</string>
    <string name="total_quantity">Total Stock Quantity</string>
    <string name="category_name">Category</string>
    <string name="save_item_changes">Save Changes</string>
    <string name="quantity_dialog_header">Item Quantity</string>
    <string name="item_quantity_hint">Quantity</string>
    <string name="confirm_button">ENTER</string>
    <string name="cancel_button">CANCEL</string>

    <!-- STUDENT ID ALERT DIALOG ACTIVITY -->
    <string name="id_dialog_header">Student ID</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="validate_button">VALIDATE</string>
    <string name="exit_button">EXIT</string>

    <!-- STUDENT CART ROW LAYOUT & CART CHANGES ALERT DIALOG -->
    <string name="text_item_name">Item Name</string>
    <string name="view_cart_item_quantity">0</string>
    <string name="approve_cart">Approve Cart</string>
    <string name="cart_save_button">SAVE</string>
    <string name="cart_delete_button">DELETE</string>
    <string name="clear_cart">CLEAR CART</string>

    <!-- STUDENT RETURNS ACTIVITY -->
    <string name="returned_quantity_hint">Returned Quantity</string>
    <string name="enter_button">ENTER</string>
    <string name="return_all">Return All</string>
    <string name="specific_return_button">Return</string>
    <string name="view_rental_info">View Possessions</string>
    <string name="view_info">View Info</string>

    <!-- MENU DROPDOWN -->
    <string name="home"> Home</string>
    <string name="profile"> Edit Profile Info</string>
    <string name="password"> Password Settings</string>
    <string name="log_out"> Log Out</string>

    <!-- ADMIN MENU -->
    <string name="rentals_and_returns">RENTALS &amp; RETURNS</string>
    <string name="rent_equipment">Rent Equipment</string>
    <string name="return_equipment">Return Equipment</string>

    <string name="add_and_search">ADD &amp; SEARCH</string>
    <string name="add_search_users">Add/Search Users</string>
    <string name="add_search_tools">Add/Search Tools</string>

    <string name="profile_settings">PROFILE SETTINGS</string>
    <string name="view_edit_profile">View/Edit My Profile</string>
    <string name="change_my_password">Change My Password</string>

    <!-- TOOLS FRAGMENT -->
    <string name="all_equipment">ALL EQUIPMENT</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_new_tools">Add Equipment</string>
    <string name="view_cart">View Cart</string>

    <!-- REGISTRATION FRAGMENT -->
    <string name="all_users">All Users</string>
    <string name="add_student">Add Student</string>
    <string name="add_admin">Add Admin</string>
    <string name="search_id">Search Student ID</string>

    <!-- ACTIVITY HEADERS -->
    <string name="rented_items">Rented Items</string>
    <string name="rent_equipment_header">Rent Equipment</string>
    <string name="update_item_info_header">Update Item Info</string>

    <!-- STUDENT INFO -->
    <string name="full_name">Full Name</string>
    <string name="possession_qty">Possession Qty</string>
    <string name="email">Email</string>
    <string name="status">Status</string>

    <!-- CHANGE PASSWORD -->
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="empty_request">All fields are required.</string>
    <string name="empty_password">Both current password fields are required. Can\'t be empty.</string>
    <string name="unmatched_currentpassword">Current password fields are not matching.</string>
    <string name="password_length">Your new password should be between 8 to 15 characters long, without spaces.</string>
    <string name="unmatched_newpasswords">Your New Passwords don\'t match</string>
    <string name="exit_confirm">Do you wish to leave your password unchanged? Unsaved changes will be lost.</string>
    <string name="exit">Exit</string>

    <string name="Admin">Admin</string>
    <string name="Student">Student</string>
    <string name="username">username</string>
    <string name="connectionError">Connection Error.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <string name="viewstudentcart">View Student Cart</string>
    <string name="viewstudentpossession">View Student Rentals</string>
    <string name="viewstudentcartheader">View Student Cart</string>

    <!-- ALL URLS -->
    <string name="pleasewait">Please wait....</string>
    <string name="studentholds">http://partscribdatabase.tech/androidconnect/studentholds.php</string>
    <string name="fetchStudentProfile">http://partscribdatabase.tech/androidconnect/fetchStudentProfile.php</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="about">About</string>
    <string name="help">Help</string>

</resources>
