<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundcolor"
    tools:context="ifeoluwa.partscribber.PartsCribberChangePassword">

    <Button
        android:id="@+id/save_password_button"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/save_password_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="352dp"
        android:onClick="savePasswordChanges"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:background="@color/supportingColor"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/confirm_new_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/current_password"
        android:textStyle="bold"
        android:textColor="@color/supportingColor"
        android:padding="9dp"
        android:background="#E1F5FE"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/confirm_current_password"
        android:layout_alignEnd="@+id/save_password_button" />

    <EditText
        android:id="@+id/confirm_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_current_password"
        android:textStyle="bold"
        android:textColor="@color/supportingColor"
        android:padding="9dp"
        android:background="#E1F5FE"
        android:layout_marginTop="5dp"
        android:layout_below="@id/current_password"
        android:layout_alignStart="@+id/new_password"
        android:layout_alignEnd="@+id/save_password_button" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_password"
        android:textStyle="bold"
        android:textColor="@color/supportingColor"
        android:padding="9dp"
        android:background="#E1F5FE"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/confirm_current_password"
        android:layout_alignStart="@+id/confirm_new_password"
        android:layout_alignEnd="@+id/save_password_button" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:textStyle="bold"
        android:textColor="@color/supportingColor"
        android:padding="9dp"
        android:background="#E1F5FE"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/new_password"
        android:layout_alignStart="@+id/save_password_button"
        android:layout_alignEnd="@+id/save_password_button" />

</RelativeLayout>
